"Added color property to .nav-links a and .sidebar a selectors"

--- a/style.css
+++ b/style.css
@@ -66,6 +66,7 @@
 
 .nav-links a {
   text-decoration: none;
+  color: #000;
 }
 
 .nav p {
@@ -1063,6 +1064,7 @@ input[type="datetime-local"]::-webkit-calendar-picker-indicator {
 
   .sidebar a {
     text-decoration: none;
+    color: #000;
   }
 
   .sidebar button {
