--- a/style.css
+++ b/style.css
@@ -1186,6 +1186,8 @@ input[type="datetime-local"]::-webkit-calendar-picker-indicator {
     width: 90%;
   }
 
+  
+
   .input-btn button {
     width: 48%;
     background-color: white;
@@ -1213,6 +1215,12 @@ input[type="datetime-local"]::-webkit-calendar-picker-indicator {
     height: 6vh;
     margin-bottom: 1.5rem;
     padding-left: 1.5rem;
+  }
+
+  .red_cal{
+    position: relative;
+    top: 23px;
+    right: 100px;
   }
 
   /* --------banner---------- */
