--- a/style.css
+++ b/style.css
@@ -178,6 +178,7 @@
 .header-input img {
   width: 64px;
   height: 42px;
+  cursor: pointer;
 }
 
 .cal-container {
@@ -218,6 +219,7 @@
   font-size: 14px;
   line-height: 21px;
   color: #ffffff;
+  cursor: pointer;
 }
 
 .input-wrapper {
@@ -347,6 +349,7 @@ input[type="datetime-local"]::-webkit-calendar-picker-indicator {
   font-size: 15.22px;
   line-height: 19.25px;
   padding: 6px;
+  cursor: pointer;
 }
 
 .banner img {
@@ -461,6 +464,7 @@ input[type="datetime-local"]::-webkit-calendar-picker-indicator {
   color: #ffffff;
   margin-top: 31px;
   margin-left: 64px;
+  cursor: pointer;
 }
 
 .mits-button {
@@ -582,7 +586,24 @@ input[type="datetime-local"]::-webkit-calendar-picker-indicator {
   border: none;
   color: #ffffff;
   width: 90%;
+  cursor: pointer;
 }
+
+.error1 {
+  color: red;
+  font-size: 14px;
+  display: flex;
+}
+
+.error2 {
+  color: red;
+  font-size: 14px;
+  display: flex;
+  position: relative;
+  left: 37%;
+}
+
+
 
 .promo-right {
   display: flex;
@@ -633,6 +654,7 @@ input[type="datetime-local"]::-webkit-calendar-picker-indicator {
   font-weight: 500;
   text-align: center;
   width: 144px;
+  cursor: pointer;
 }
 
 .promo-text span {
@@ -1545,6 +1567,16 @@ input[type="datetime-local"]::-webkit-calendar-picker-indicator {
   .promo-left button {
     width: 40%;
     height: 30px;
+  }
+
+  .error1{
+    position: relative;
+    left: 3%;
+    top: -81px;
+  }
+
+  .error2{
+    left: -28%;
   }
 
   .promo-left p {
